bindings/cpp/include/zlink.h

typedef void (zlink_free_fn) (void *data_, void *hint_);
/*
 * SpotNode service-level batching options.
 */
ZLINK_EXPORT zlink_config_result_t zlink_set_spot_node_option (
  void *handle_,
  zlink_spot_node_option_t option_,
  const void *optval_,
  size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_spot_node_option (
  void *handle_,
  zlink_spot_node_option_t option_,
  void *optval_,
  size_t *optvallen_);
typedef void (zlink_thread_fn) (void *);